# CG-2021

./: .gitignore  CMakeLists.txt  README.md  cam.cpp  efera.3D  engine.cpp  main.cpp  remk.cpp  teste.c
engine/src/: CMakeLists.txt  cam.cpp  expressionParser.cpp  groupClasses.cpp  lights.cpp  main.cpp  model.cpp  scene.cpp  xmlParser.cpp
generator/: shapeGen.cpp
generator/src/: CMakeLists.txt  main.cpp  shapes.cpp
testes/: asteroid.3d  box.3d  bruh.xml  cilUV.3d  cone.3d  coneUV.3d  cubeUV.3d  cyl.3d  dangerZone.xml  heightTeste.xml  lightTest.xml  plane.3d  rotate.xml  scaledSolarSystem.xml  solarSystem.xml  solarSystemV2.xml  solarSystemV20.xml  sphere.3d  sphereUV.3d  t.xml  te.xml  teap.3d  teapot.xml  terreno.3d  teste.xml  testeUV.3d  tor.3d  torUV.3d  tort.xml  torus.3d
testes/Vector/: lightTest.xml
testes/solarSystem/: asteroidUV.3d  sky.3d  solarSystemV2.xml
testes/solarSystem/3d/: saturnRing.3d  sphere.3d  uranusRing.3d
testes/testGrounds/: cilUV.3d  lightTest.xml  plUV.3d
